[package]
name = "proxy-pulse"
version = "1.0.2"
edition = "2021"
description = "Open-source proxy pool management and network quality monitoring system"
license = "MIT"
authors = ["OpenInfra Labs"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "fs", "io-util", "signal"] }

# Web framework
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Embedded static assets
rust-embed = "8"
mime_guess = "2"

# Utility
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.16"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
axum-extra = { version = "0.9", features = ["cookie"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
